create ecommerce section Home-Page

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @theme{
     --color-primary:#826F66;
     --color-background:#252b42;
@@ -10,8 +10,13 @@
     --color-muted-foreground:#737373;
 
     --font-montserrat:"montserrat", "sans-serif";
-
+    --font-family:"garamond";
+    --font-small:"inter";
     --breakpoint-xs:460px;
+
+    --root {
+  --font-inter: "Inter", sans-serif;
+}
 }
 @layer base{
     h1{
