--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -13,17 +13,21 @@
     --spacing: 0.25rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-4xl: 2.25rem;
     --text-4xl--line-height: calc(2.5 / 2.25);
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
+    --font-weight-bold: 700;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
     --color-hover: teal;
+    --font-family: "garamond";
   }
 }
 @layer base {
@@ -211,6 +215,12 @@
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
+  .mt-5 {
+    margin-top: calc(var(--spacing) * 5);
+  }
+  .mt-6 {
+    margin-top: calc(var(--spacing) * 6);
+  }
   .mt-8 {
     margin-top: calc(var(--spacing) * 8);
   }
@@ -236,8 +246,17 @@
   .h-\[82px\] {
     height: 82px;
   }
+  .h-\[348px\] {
+    height: 348px;
+  }
+  .h-\[350px\] {
+    height: 350px;
+  }
   .h-\[398px\] {
     height: 398px;
+  }
+  .h-full {
+    height: 100%;
   }
   .w-\[86px\] {
     width: 86px;
@@ -245,8 +264,14 @@
   .w-full {
     width: 100%;
   }
+  .max-w-\[380px\] {
+    max-width: 380px;
+  }
   .max-w-\[420px\] {
     max-width: 420px;
+  }
+  .max-w-\[1035px\] {
+    max-width: 1035px;
   }
   .cursor-pointer {
     cursor: pointer;
@@ -272,11 +297,24 @@
   .gap-15 {
     gap: calc(var(--spacing) * 15);
   }
+  .border-b {
+    border-bottom-style: var(--tw-border-style);
+    border-bottom-width: 1px;
+  }
+  .border-\[\#3A3845\] {
+    border-color: #3A3845;
+  }
   .bg-\[\#826f66\] {
     background-color: #826f66;
   }
+  .bg-\[\#F7F6F5\] {
+    background-color: #F7F6F5;
+  }
   .bg-white {
     background-color: var(--color-white);
+  }
+  .object-cover {
+    object-fit: cover;
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
@@ -287,14 +325,23 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
+  .py-5 {
+    padding-block: calc(var(--spacing) * 5);
   }
-  .py-20 {
-    padding-block: calc(var(--spacing) * 20);
+  .pt-20 {
+    padding-top: calc(var(--spacing) * 20);
+  }
+  .pb-15 {
+    padding-bottom: calc(var(--spacing) * 15);
+  }
+  .pb-\[40px\] {
+    padding-bottom: 40px;
   }
   .text-center {
     text-align: center;
+  }
+  .font-family {
+    font-family: var(--font-family);
   }
   .font-serif {
     font-family: var(--font-serif);
@@ -307,6 +354,10 @@
     font-size: var(--text-sm);
     line-height: var(--tw-leading, var(--text-sm--line-height));
   }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
+  }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
@@ -315,8 +366,14 @@
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .text-\[\#3A3845\] {
+    color: #3A3845;
+  }
   .text-\[\#826F66\] {
     color: #826F66;
+  }
+  .text-\[\#595667\] {
+    color: #595667;
   }
   .text-\[\#FFFDFB\] {
     color: #FFFDFB;
@@ -382,6 +439,12 @@
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
+  .sm\:text-2xl {
+    @media (width >= 40rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
   .md\:absolute {
     @media (width >= 48rem) {
       position: absolute;
@@ -417,6 +480,11 @@
       height: 100%;
     }
   }
+  .md\:w-1\/2 {
+    @media (width >= 48rem) {
+      width: calc(1 / 2 * 100%);
+    }
+  }
   .md\:w-\[420px\] {
     @media (width >= 48rem) {
       width: 420px;
@@ -430,6 +498,11 @@
   .md\:grid-cols-2 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+  }
+  .md\:flex-row {
+    @media (width >= 48rem) {
+      flex-direction: row;
     }
   }
   .md\:px-0 {
@@ -455,6 +528,7 @@
   }
 }
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @layer base {
   h1 {
     font-size: 2.5rem;
@@ -465,6 +539,11 @@
   button {
     cursor: pointer;
   }
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -508,6 +587,7 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
       --tw-font-weight: initial;
       --tw-translate-x: 0;
       --tw-translate-y: 0;
